--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FavouriteFood">
-        <activity android:name=".view.activities.SplashActivity"
+        <activity android:name=".view.activities.AddUpdateDishActivity"
+            android:theme="@style/Theme.FavouriteFood"
+            android:label="Add Dish">
+
+        </activity>
+        <activity
+            android:name=".view.activities.SplashActivity"
             android:theme="@style/Theme.FavouriteFood">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,8 +25,7 @@
         </activity>
         <activity
             android:name=".view.activities.MainActivity"
-            android:label="@string/title_activity_main">
-        </activity>
+            android:label="@string/title_activity_main"></activity>
     </application>
 
 </manifest>
